# cmake-arm-cortex-m

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
.devcontainer/: devcontainer.json
.github/: CI.yml
.github/workflows/: CI.yml
app/: CMakeLists.txt  gcc_arm.ld  main.c
lib/: CMakeLists.txt
lib/cmsis_5/: CMakeLists.txt
lib/nano/: CMakeLists.txt  console.c  syscalls.c  sysmem.c
lib/specs/: CMakeLists.txt  console.c  syscalls.c
src/: CMakeLists.txt  link_ARMClang.sct  link_IAR.icf  main.c
